Index.html promo-slider now accessible. z-index property fixed

--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,10 @@ a {
 }
 
 .main-header {
+  position: relative;
   height: 120px;
   margin-bottom: 535px;
-  z-index: 200;
+  z-index: 2;
 }
 .page-catalog-bg .main-header {
   margin-bottom: 0;
@@ -320,7 +321,7 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  z-index: -1;
+  z-index: 1;
 }
 .promo-slider {
   width: 1045px;
@@ -368,6 +369,10 @@ a {
 }
 
 /* main */
+.main-content {
+  position: relative;
+  z-index: 3;
+}
 .page-heading {
   font-size: 35px;
   line-height: 41px;
